# sEMG-unpaired-text

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  results.md
configs/: finetune_from_jepa.yaml  finetune_from_uml.yaml  train_baseline.yaml  train_uml.yaml  train_uml_hubert.yaml  train_uml_hubert_gaddy_l03.yaml  train_uml_hubert_libri_l03.yaml  train_uml_hubert_voiced.yaml  train_uml_multiaux.yaml  train_uml_multiaux_byt5.yaml  train_uml_text.yaml
scripts/: analyze_sweep_results.py  analyze_unit_durations.py  build_lexicon_from_unigrams.py  build_phoneme_dict.py  decode_lexicon_flashlight.py  eval_hubert_resynth.py  evaluate.py  finetune_from_jepa.py  finetune_from_uml.py  phoneme_diag.py  phoneme_to_words.py  phoneme_to_words_lattice.py  precompute_audio.py  precompute_audio_gaddy.py  precompute_audio_hubert_units.py  precompute_hubert_units.py  precompute_raw_emg.py  precompute_text.py  train_baseline.py  train_subword.py  train_uml.py
semg_jepa/: architecture.py  cached_dataset.py  ctc_utils.py  tokenizers.py  transformer.py  unigrams.py
slurm/: analyze_sweep.slurm  build_lexicon.slurm  decode_lexicon_flashlight.slurm  eval_hubert_resynth.slurm  evaluate.slurm  finetune_from_jepa.slurm  finetune_from_uml.slurm  phoneme_diag.slurm  phoneme_to_words.slurm  phoneme_to_words_lattice.slurm  precompute_audio.slurm  precompute_audio_gaddy.slurm  precompute_audio_hubert_units.slurm  precompute_hubert_units.slurm  precompute_raw_emg.slurm  sweep_resolution.sh  sweep_unit.slurm  train_baseline.slurm  train_uml.slurm  train_uml_gaddy_audio.slurm  (+3 more)
(+4 files in other folders)
