[project]
name = "semg-unpaired-text"
version = "0.2.0"
description = "sEMG silent-speech CTC — unpaired-text & token-resolution study (phase 2)"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "librosa",
  "soundfile",
  "textgrids",
  "jiwer",
  "Unidecode",
  "tqdm",
  "ctcdecode",
  "sentencepiece",   # subword unit
  # "g2p_en",        # optional: phoneme unit (or pass a CMUdict via --phoneme-dict)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
